--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,29 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
+
 :root {
+  --colors-text: rgba(255, 255, 255, 0.87);
+  --colors-border: #fef6e7;
+  --colors-background: #242424;
+  --colors-btn-background: #1a1a1a;
+
+  --ui-text: var(--colors-text);
+  --ui-border: var(--colors-border);
+  --ui-background: var(--colors-background);
+  --ui-btn-background: var(--colors-btn-background);
+}
+
+body {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  height: 100vh;
+  
+  color: var(--ui-text);
+  background-color: var(--ui-background);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -13,25 +31,8 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
 h1 {
-  font-size: 3.2em;
+  font-size: 3rem;
   line-height: 1.1;
 }
 
@@ -42,27 +43,19 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: var(--ui-btn-background);
   cursor: pointer;
   transition: border-color 0.25s;
 }
+
 button:hover {
-  border-color: #646cff;
+  border-color: var(--ui-border);
 }
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-}
+/* TODO */
+/* @media (prefers-color-scheme: light) {
+} */
