--- a/src/index.css
+++ b/src/index.css
@@ -56,6 +56,16 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
+input {
+  background-color: var(--ui-background);
+  width: 100%;
+}
+
+table *:not(input, svg, div) {
+  border: 1px solid white;
+  padding: 8px;
+}
+
 /* TODO */
 /* @media (prefers-color-scheme: light) {
 } */
